src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Box sizing */
*,
*:before,
*:after {
  box-sizing: inherit;
}

/* HTML styles */
html {
  text-rendering: optimizeLegibility;
  font-feature-settings: 'pnum' on, 'lnum' on;
  @apply box-border touch-manipulation scroll-smooth bg-light text-dark antialiased;
}

/* Next.js root container */
#__next {
  @apply flex min-h-screen flex-col font-sans;
}

/* Heading styles */
h1,
h2,
h3,
h4,
h5,
h6 {
  @apply font-kindabold;
}

/* Button styles */
button {
  @apply inline-flex items-center justify-center rounded-full font-kindabold;
}

/* width */
/* ::-webkit-scrollbar {
  width: 14px;
  height: 16px;
} */

/* Track */
/* ::-webkit-scrollbar-track {
} */

/* Handle */
/* ::-webkit-scrollbar-thumb {
} */

/* Handle on hover */
/* ::-webkit-scrollbar-thumb:hover {
} */

